[package]
name = "multi_mut"
version = "0.1.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Safe extension methods for HashMap that help getting multiple mutable references to the values contained in it."
license = "MIT"
repository = "https://github.com/golddranks/binary_macros"
readme = "README.md"
keywords = ["base64", "hex", "binary", "encoding", "decoding"]

[dependencies]
