[package]
name = "multi_mut"
version = "0.1.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Extension methods that provide a safe API for HashMap that helps getting multiple mutable references to the values contained in it."
license = "MIT"
repository = "https://github.com/golddranks/multi_mut"
readme = "README.md"
keywords = ["hashmap", "mutability", "extension"]

[dependencies]
