[package]
name = "multi_mut"
version = "0.1.5"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Methods on HashMap and BTreeMap for safely getting multiple mutable references to the contained values."
license = "MIT"
repository = "https://github.com/golddranks/multi_mut"
readme = "README.md"
keywords = ["hashmap", "mutability", "extension"]

[dependencies]
